# qt_client_server_viewport_coordinates

./: CMakeLists.txt  readme.md
includes/client/: Client.h
includes/server/: Server.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  Client.cpp  Viewport.cpp  Viewport.h
src/server/: CMakeLists.txt  Server.cpp
src/test_client/: CMakeLists.txt  main.cpp
src/test_server/: CMakeLists.txt  main.cpp
